@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h5, h6 {
 }
 
 h1{
-	font-size: 17px;
+	font-size: 14px;
     font-weight:bold;
     color: #7C502F;
     font-style:italic;
